--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>CHATly</title>
-        <link rel="stylesheet" href="style.css">
+        <script src="https://cdn.jsdeliver.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script>
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
 <body>
