--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CHATly</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src="/socket.io/socket.io.js"></script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
       {{{ body }}}
     </main>
   </div>
+  <script src="/chat.js"></script>
 </body>
 
 </html>
