--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +10,6 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <div class="wrapper">
       <ul class="nav-pills">
@@ -59,3 +59,4 @@
       </div>
     </div>
   </body>
+  </html>
