--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <ul class="nav-pills">
         <li><a href="/dashboard">Profile</a></li>
-        <li><a href="/messages">Messages</a></li>
+        <li><a href="/chat">Messages</a></li>
         <li><a href="/">Logout</a></li>
       </ul>
       <div class="row">
