--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,15 +17,15 @@
                 <div class="nameInput">
                 <div class="field">
                     <label>First Name</label>
-                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="First Name" value="firstName">
                 </div>
                 <div class="field">
                     <label>Last Name</label>
-                    <input type="text" placeholder="Last Name">
+                    <input type="text" placeholder="Last Name" value="lastName">
                 </div>
                 <div class="field">
                     <label>Email Address</label>
-                    <input type="text" placeholder="Enter your email address">
+                    <input type="text" placeholder="Enter your email address" value="email">
                 </div>
                 <div class="field">
                     <label>Password</label>
