--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -27,9 +27,9 @@
                   alt=""
                 />
               </a>
-              <h1>User Name</h1>
-              <p>useremail@email.com</p>
-              <p>username</p>
+              <h1>{{ firstName }} {{ lastName }}</h1>
+              <p>{{ email }}</p>
+              <p>{{ username }}</p>
             </div>
           </div>
         </div>
