--- a/public/css/secondary-styles.css
+++ b/public/css/secondary-styles.css
@@ -2,16 +2,39 @@
 
 
 body {
-    color: white;
+    font-family:  'Raleway', sans-serif;
+	font-size: 16px;
+	margin: 20px !important;
     background: white;
-    font-family: 'Raleway', sans-serif;
-    margin: 10px !important;
-    font-size: 13px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
 }
 
+/* nav bar style */
+.topnav {
+    background-color: #fa824c;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #639fab;
+    color: white;
+  }
 .wrapper {
     width: 450px;
     background: #FA824C;
@@ -69,6 +92,7 @@ body {
 .user-heading p {
     font-size: 15px;
 }
+
 
 .bio-graph-heading {
     background: #79bcc9;
