--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,7 +13,7 @@
   <a class="active" href="#home">CHATly</a>
   <a href="#login">Login</a>
   <a href="#logout">Logout</a>
-  <a href="#about">About</a>
+  <a href="\dashboard">About</a>
 </div>
     <div class="join-container">
 			<header class="join-header">
@@ -24,15 +24,18 @@
                     <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
-                            <input type="text" placeholder="First Name">
+                            <input type="text" placeholder="First Name"
+                            required />
                         </div>
                         <div class="field">
                             <label>Last Name</label>
-                            <input type="text" placeholder="Last Name">
+                            <input type="text" placeholder="Last Name"
+                            required />
                         </div>
 					<div class="field">
                         <label>Email Address</label>
-                        <input type="text" placeholder="Enter your email address">
+                        <input type="text" placeholder="Enter your email address"
+                        required />
                     </div>
                     <div class="form-control">
 						<label for="username">Username</label>
@@ -46,7 +49,8 @@
 					</div>
                     <div class="field">
                         <label>Password</label>
-                        <input type="text" placeholder="Enter a new password">
+                        <input type="text" placeholder="Enter a new password"
+                        required />
                     </div>
                     <div class="form-control">
 						<label for="room">Choose a Room</label>
