--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,22 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHATly</title>
-    <link rel="stylesheet" href="css/style2.css" />
-    <link
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
+     <link rel="stylesheet" href="\css\secondary-styles.css">
   </head>
   <body>
-    <div class="wrapper">
-      <ul class="nav-pills">
-        <li><a href="/dashboard">Profile</a></li>
-        <li><a href="/messages">Messages</a></li>
-        <li><a href="/">Logout</a></li>
-      </ul>
-      <div class="row">
-        <div>
-          <div>
+      <!-- navigation -->
+      <div class="topnav">
+    <div class="nav-pills">
+  <a class="active" href="/dashboard">Profile</a>
+  <a href="/messages">Messages</a>
+  <a href="/">Logout</a>
+</div>
+</div>
+    <div class="container">
             <div class="user-heading round">
               <a href="#">
                 <img
@@ -27,14 +23,13 @@
                   alt=""
                 />
               </a>
-              <h1>{{ firstName }} {{ lastName }}</h1>
-              <p>{{ email }}</p>
-              <p>{{ username }}</p>
+              <h1>User Name</h1>
+              <p>useremail@email.com</p>
+              <p>username</p>
             </div>
-          </div>
-        </div>
+          
+        
         <div class="profile-info">
-          <div>
             <div class="bio-graph-heading">
               About Me
             </div>
@@ -54,7 +49,6 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
