--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,7 +12,7 @@
       <div class="topnav">
     <div class="nav-pills">
   <a class="active" href="/dashboard">Profile</a>
-  <a href="/messages">Messages</a>
+  <a href="/chat">Messages</a>
   <a href="/">Logout</a>
 </div>
 </div>
