--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -13,6 +13,12 @@
     <title>CHATly</title>
   </head>
   <body>
+    <div class="topnav">
+  <a class="active" href="#home">CHATly</a>
+  <a href="/dashboard">Profile</a>
+  <a href="/chat">Messages</a>
+  <a href="/">Logout</a>
+</div>
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-smile"></i> CHATly</h1>
