--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,15 +7,16 @@
      <link rel="stylesheet" href="\css\secondary-styles.css">
   </head>
   <body>
-    <div class="wrapper">
-      <ul class="nav-pills">
-        <li><a href="/dashboard">Profile</a></li>
-        <li><a href="/chat">Messages</a></li>
-        <li><a href="/">Logout</a></li>
-      </ul>
-      <div class="row">
-        <div>
-          <div>
+      <!-- navigation -->
+      <div class="topnav">
+  <a class="active" href="#home">CHATly</a>
+  <a href="/dashboard">Profile</a>
+  <a href="/chat">Messages</a>
+  <a href="/">Logout</a>
+</div>
+</div>
+    <div class="join-container">
+			<main class="join-main">
             <div class="user-heading round">
               <a href="#">
                 <img
