--- a/public/css/secondary-styles.css
+++ b/public/css/secondary-styles.css
@@ -5,7 +5,7 @@ body {
     font-family:  'Raleway', sans-serif;
 	font-size: 16px;
 	margin: 20px !important;
-    background: white;
+    background: #afe5f0;
 }
 
 /* nav bar style */
@@ -18,7 +18,6 @@ body {
   .topnav a {
     float: left;
     color: #f2f2f2;
-    text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -35,8 +34,10 @@ body {
     background-color: #639fab;
     color: white;
   }
-.wrapper {
-    width: 450px;
+
+.join-container{
+    width: 500px;
+    height: 700px;
     background: #FA824C;
 }
 
@@ -106,9 +107,11 @@ body {
 
 
 .bio-row {
-    width: 50%;
+    width: 100%;
     float: left;
+    margin-top: 10px;
     margin-bottom: 10px;
     padding:0 15px;
     font-size: 15px;
+    font-weight: bold;
 }
