--- a/public/css/secondary-styles.css
+++ b/public/css/secondary-styles.css
@@ -18,6 +18,7 @@ body {
   .topnav a {
     float: left;
     color: #f2f2f2;
+    text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -37,7 +38,7 @@ body {
 
 .join-container{
     width: 500px;
-    height: 700px;
+    height: 600px;
     background: #FA824C;
 }
 
