--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ body {
     font-family:  'Raleway', sans-serif;
 	font-size: 16px;
 	margin: 20px !important;
-    background: white;
+    background: #afe5f0;
 }
 
 ul {
@@ -193,6 +193,7 @@ a {
 	padding: 5px;
 	height: 40px;
 	width: 100%;
+	background-color: white;
 }
 
 .join-main select {
