--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,11 +20,11 @@
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action="chat.html">
+				<form action="/api/submit-form" method="POST">
                     <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
-                            <input type="text" placeholder="First Name"
+                            <input type="text" placeholder="First Name" name="firstname"
                             required />
                         </div>
                         <div class="field">
