js hbs connection

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,9 +23,8 @@
                   alt=""
                 />
               </a>
-              <h1>User Name</h1>
-              <p>useremail@email.com</p>
-              <p>username</p>
+              <h1 id="username"></h1>
+              <p id="email"></p>
             </div>
           
         
@@ -52,5 +51,6 @@
         </div>
       </div>
     </div>
+    <script src="js/dashboard.js"></script>
   </body>
   </html>
