--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -52,7 +52,7 @@
       </div>
   </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="js/dashboard.js"></script>
 </body>
 
 </html>
