--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -14,7 +14,7 @@
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action="/api/submit-form" method="POST">
+				<form action="/submit-form" method="get">
                     <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
