--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,8 +24,8 @@
             src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png"
             alt="" />
         </a>
-        <h1>User Name</h1>
-        <p>useremail@email.com</p>
+        <h1 id="usernameProf"></h1>
+        <p id="emailProf"></p>
       </div>
 
 
@@ -52,6 +52,7 @@
       </div>
   </div>
   </div>
+  <script src="js/dashboard.js"></script>
 </body>
 
 </html>
