--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CHATly</title>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="http://localhost:3001/socket.io/socket.io.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,7 +15,7 @@
       {{{ body }}}
     </main>
   </div>
-  <script src="/chat.js"></script>
+  <script src=".\chat"></script>
 </body>
 
 </html>
