--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ body {
     font-family:  'Raleway', sans-serif;
 	font-size: 16px;
 	margin: 20px !important;
-    background: #afe5f0;
+    background: #a5d5df;
 }
 
 ul {
@@ -295,3 +295,6 @@ a {
 		font-size: 15px;
 	}
 }
+
+/* Submit Form */
+
