password now hidden

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,6 +196,14 @@ a {
 	background-color: white;
 }
 
+.join-main input[type='password'] {
+	font-size: 16px;
+	padding: 5px;
+	height: 40px;
+	width: 100%;
+	background-color: white;
+}
+
 .join-main select {
 	font-size: 16px;
 	padding: 5px;
