--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -43,7 +43,7 @@
 					</div>
                     <div class="field">
                         <label>Password</label>
-                        <input type="text" placeholder="Enter a new password"
+                        <input type="password" placeholder="Enter a new password"
                         required />
                     </div>
                     <div class="form-control">
