this one works!

--- a/views/submit-form.handlebars
+++ b/views/submit-form.handlebars
@@ -14,11 +14,11 @@
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action='/dashboard'>
+				<form action='/chat'>
                     <div class="nameInput">
                         <div class="field">
                             <label>Birthday</label>
-                            <input type="text" placeholder="Your birthday?" name="birthday"
+                            <input type="date" id="birthday" placeholder="Your birthday?" name="birthday"
                             required />
                         </div>
                         <div class="field">
