--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -21,7 +21,7 @@
 </div>
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-smile"></i> CHATly</h1>
+        <h1><i class="fas fa-comments"></i></i> CHATly</h1>
         <a id="leave-btn" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
