--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,7 +20,6 @@
 				<h1> CHATly</h1>
 			</header>
 			<main class="join-main">
-				<form action="chat.html" method="get">
                     <div class="nameInput">
                         <div class="field">
                             <label>First Name</label>
@@ -37,6 +36,7 @@
                         <input type="text" placeholder="Enter your email address"
                         required />
                     </div>
+                    <form action="chat.html" method="get">
                     <div class="form-control">
 						<label for="username">Username</label>
 						<input
@@ -46,15 +46,10 @@
 							placeholder="Enter username..."
 							required
 						/>
-					</div>
-                    <div class="field">
-                        <label>Password</label>
-                        <input type="password" placeholder="Enter a new password"
-                        required />
-                    </div>
+
                     <div class="form-control">
-						<label for="room">Choose a Room</label>
-						<select name="room" id="room">
+						<label for="room-name">Choose a Room</label>
+						<select name="room-name" id="room-name">
 							<option value="Azeroth">Azeroth</option>
 							<option value="Shadowlands">Shadowlands</option>
 							<option value="Pandaria">Pandaria</option>
