--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,5 @@
+    {{!-- homepage.handlebars --}}
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -11,9 +13,9 @@
       <!-- navigation -->
       <div class="topnav">
   <a class="active" href="#home">CHATly</a>
-  <a href="./waitroom.html">Login</a>
+  {{!-- <a href="./waitroom.html">Login</a>
   <a href="#logout">Logout</a>
-  <a href="\dashboard">About</a>
+  <a href="\dashboard">About</a> --}}
 </div>
    <div class="join-container">
 			<header class="join-header">
