--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -53,6 +53,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../chat.js"></script>
   </body>
 </html>
