--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,5 @@
+                                          {{!-- main.handlebars --}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +9,28 @@
   <title>CHATly</title>
   <script src="http://localhost:3001/socket.io/socket.io.js"></script>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/secondary-styles.css">
 </head>
+
+<div class="topnav">
+  {{#if loggedIn}}
+    <a class="active" href="/index">CHATly</a>
+    {{!-- <a class="#login" href="../../login">Login</a> --}}
+    <a class="#logout" href="../../public/js/logout.js">Logout</a>
+    {{else}}
+   <a class="#create" href="../../index.html">Create Account</a>
+    <a class="#login" href="/login">Login</a>
+    {{/if}}
+   {{!-- <a href="/views/login.handlebars">Login</a> --}}
+  {{!-- <a href="signup.html">Signup</a> --}}
+            {{!-- {{#if loggedIn}}
+            <a href="index.html">Logout</a>
+            <a href="/profile.html">About</a>
+            {{else}}
+            <a href="index.html">Home</a>
+            <a href="/views/login.handlebars">Login</a>
+            {{/if}} --}}
+    </header>
 
 <body>
   
@@ -15,7 +38,10 @@
       {{{ body }}}
     </main>
   </div>
-  <script src="/chat"></script>
+  <script src="/chat.js"></script>
+  {{#if loggedIn}}
+<script src="/javascript/logout.js"></script>
+{{/if}}
 </body>
 
 </html>
