--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,18 @@
-{{!-- login.handlebars --}}
+<form class="login-form">
+  <div>
+    <label for="email-login">email:</label>
+    <input type="text" id="email-login" />
+  </div>
+  <div>
+    <label for="password-login">password:</label>
+    <input type="password" id="password-login" />
+  </div>
+  <div>
+    <button type="submit">login</button>
+  </div>
+</form>
 
-{{!-- <form class="signup-form">
+<form class="signup-form">
   <div>
     <label for="username-signup">username:</label>
     <input type="text" id="username-signup" />
@@ -15,32 +27,8 @@
   </div>
   <div>
     <button type="submit">signup</button>
-  </div> --}}
-
- 
-  <form class="signup-form>"
-  <div class="join-container">
-        <header class="join-header">
-            {{!-- <h1> CHATly</h1> --}}
-        </header></div>
-        
-        <main class="join-main">
-            {{!-- <form action="index.html"> --}}
-               
-                <div class="field">
-                    <label for="email-signup">Email:</label>
-                   <input type="text" id="email-signup"  placeholder="Enter your email address"
-                    required />
-                </div>
-                <div class="field">
-                    <label for="password-signup">Password:</label>
-                    <input type="password" id="password-signup" placeholder="Enter a new password"
-                    required />
-                </div>
-                <div>
-    <button type="submit" class="btn">Login</button>
   </div>
-                
 </form>
 
-<script src="../public/js/login.js"></script>
+
+<script src="/javascript/login.js"></script>
