--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,47 +1,45 @@
-                                          {{!-- main.handlebars --}}
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CHATly</title>
-  <script src="http://localhost:3001/socket.io/socket.io.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/secondary-styles.css">
+  <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+  <title>{{title}}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
-<div class="topnav">
-  {{#if loggedIn}}
-    <a class="active" href="/index">CHATly</a>
-    {{!-- <a class="#login" href="../../login">Login</a> --}}
-    <a class="#logout" href="../../public/js/logout.js">Logout</a>
-    {{else}}
-   <a class="#create" href="../../index.html">Create Account</a>
-    <a class="#login" href="/login">Login</a>
-    {{/if}}
-   {{!-- <a href="/views/login.handlebars">Login</a> --}}
-  {{!-- <a href="signup.html">Signup</a> --}}
-            {{!-- {{#if loggedIn}}
-            <a href="index.html">Logout</a>
-            <a href="/profile.html">About</a>
-            {{else}}
-            <a href="index.html">Home</a>
-            <a href="/views/login.handlebars">Login</a>
-            {{/if}} --}}
-    </header>
-
 <body>
-  
-    <main>
-      {{{ body }}}
-    </main>
+  <nav class="navbar navbar-expand-lg navbar-light nav-yellow">
+    <div class="container-fluid">
+      <a class='navbar-brand' href='/'> <src="/assets/img/logo.png"></a>
+      <div class="collapse navbar-collapse nav-right" id="navbarNav">
+        <ul class="navbar-nav nav-end">
+          <li class="nav-item">
+            <a class="nav-link" href="/signup">Create Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Log in</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Your Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="http://localhost:3001/">Chat</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <div class="container-fluid">
+    {{{ body }}}
   </div>
-  <script src="/chat.js"></script>
-  {{#if loggedIn}}
-<script src="/javascript/logout.js"></script>
-{{/if}}
+
+
+<script type="text/javascript" src="../../public/assets/js/main.js"></script>
 </body>
 
 </html>
