--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,43 +3,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-  <title>{{title}}</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CHATly</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light nav-yellow">
-    <div class="container-fluid">
-      <a class='navbar-brand' href='/'> <src="/assets/img/logo.png"></a>
-      <div class="collapse navbar-collapse nav-right" id="navbarNav">
-        <ul class="navbar-nav nav-end">
-          <li class="nav-item">
-            <a class="nav-link" href="/signup">Create Account</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Log in</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/profile">Your Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" target="_blank" href="http://localhost:3001/">Chat</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-
-  <div class="container-fluid">
-    {{{ body }}}
+  <div class="wrapper">
+    <header>
+      <h1>
+        <a href="/">CHATly</a>
+      </h1>
+      <nav>
+        {{!-- <button id="logout" class="btn-no-style">logout</button> --}}
+        <a href="/login">login</a>
+      </nav>
+    </header>
+    <main>
+      {{{ body }}}
+    </main>
+    {{!-- <footer>
+      Thanks for visiting!
+    </footer> --}}
   </div>
 
-
-<script type="text/javascript" src="../../public/assets/js/main.js"></script>
 </body>
 
 </html>
