--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,9 +43,9 @@
                         <input type="password" placeholder="Enter a new password"
                         required />
                     </div> -->
-                    <div class="field">
-						<label for="room">Choose a Room</label>
-						<select name="room" id="room">
+                    <div class="form-control">
+						<label for="room-name">Choose a Room</label>
+						<select name="room-name" id="room-name">
 							<option value="Azeroth">Azeroth</option>
 							<option value="Shadowlands">Shadowlands</option>
 							<option value="Pandaria">Pandaria</option>
