--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,17 +8,21 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
-<body>
-  <div class="wrapper">
-    <header>
-      <h1>
-        <a href="/">CHATly</a>
-      </h1>
-      <nav>
-        {{!-- <button id="logout" class="btn-no-style">logout</button> --}}
-        <a href="/login">login</a>
-      </nav>
-    </header>
+<div class="topnav">
+   
+        <a class="active" href="/">CHATly</a>
+        <nav class="navbar mt-2">
+            {{#if loggedIn}}
+            <a href="/" class="navbar-item is-hoverable pt-1">homepage</a>
+            <a href="/dashboard" class="navbar-item is-hoverable pt-1">dashboard</a>
+            <button id="logout" class="button is-danger">logout</button>
+            {{else}}
+            {{!-- <a href="/" class="navbar-item is-hoverable pt-1">signup</a> --}}
+            <a href="/login" class="button is-primary">login</a>
+            {{/if}}
+        </div>
+    
+
     <main>
       {{{ body }}}
     </main>
@@ -26,7 +30,7 @@
       Thanks for visiting!
     </footer> --}}
   </div>
-
+<script src="/javascript/logout.js"></script>
 </body>
 
 </html>
