--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
-<div class="column">
+<div class="join-container">
+  <main class="join-main">
 <h2 class="title pb-4">login:</h2><hr>
 <form class="login-form">
   <div>
@@ -11,10 +12,10 @@
   </div>
   <div>
     <button type="submit" class="button is-primary">login</button>
-    <a href="/signup"><button type="button" class="button is-danger">signup</button></a>
+    {{!-- <a href="/signup"><button type="button" class="button is-danger">signup</button></a> --}}
   </div>
 </form>
-</div>
+{{!-- </div> --}}
 
 <!-- javascript file-->
 <script src="/javascript/login.js"></script>
