--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,5 @@
-<div class="column">
+<div class="join-container">
+  <main class="join-main">
 <h2 class="title pb-4">create new account:</h2><hr>
 <form class="signup-form">
   <div>
